# windows-realtime-event-platform

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/: python_module.cpp
cpp/include/simlab/: graph.hpp  kernel.hpp  metrics.hpp  population.hpp  types.hpp
cpp/src/: graph.cpp  kernel.cpp  metrics.cpp  population.cpp
docs/: architecture.md  persona-design-rationale.md  portfolio-package.md  positioning.md  roadmap-12-weeks.md  technology-adoption-review.md  testing-debugging.md
fixtures/synthetic_public_issue/: expected_assertions.json  scenario.json  scenario_grounded.expected_assertions.json  scenario_grounded.json
fixtures/synthetic_public_issue/grounding/: briefing.md  community.txt  interventions.json
python/gan_simlab/: config.py
python/gan_simlab/analysis/: __init__.py  interaction_analysis.py
python/gan_simlab/api/: main.py  routes_runs.py
python/gan_simlab/expression/: __init__.py  templates.py
python/gan_simlab/gallery/: __init__.py  reporting.py  schema.py  simulator.py
python/gan_simlab/grounding/: __init__.py  service.py
python/gan_simlab/interaction/: __init__.py  generator.py  validation.py
python/gan_simlab/persona/: __init__.py  snapshot.py  validation.py
python/gan_simlab/runner/: artifacts.py  execution.py  kernel_client.py  launch.py  population.py  prepared_cache.py  reporting.py  subprocess_runner.py  worker.py
python/gan_simlab/schemas/: artifacts.py  scenario.py
python/gan_simlab/storage/: db.py  runs.py
python/gan_simlab/tools/: __init__.py  benchmark_runs.py  gallery_run.py  grounding_smoke.py
python/gan_simlab/validation/: checks.py
python/simlab/: __init__.py  config.py
python/simlab/analysis/: __init__.py  (+1 more)
src/: README.md
tasks/: backlog.md  implementation-checklist.md  milestones.md  today-checklist.md
tests/cpp/: README.md
tests/python/: test_api_runs.py  test_benchmark_runs.py  test_expression.py  test_gallery_simulator.py  test_grounding.py  test_interaction.py  test_interaction_validation.py  test_kernel_parity.py  test_population_graph.py  test_runner_artifacts.py  test_scenario_schema.py  test_validation_rules.py
(+32 files in other folders)
